fix example matcher